k8s/eks-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-lb
  namespace: newevent
spec:
  type: LoadBalancer
  selector:
    app: frontend
  ports:
    - port: 80
      targetPort: 80
