k8s/eks-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: newevent-ingress
  namespace: newevent
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /api/events
            pathType: Prefix
            backend:
              service:
                name: event-service
                port:
                  number: 80
          - path: /api/programs
            pathType: Prefix
            backend:
              service:
                name: program-service
                port:
                  number: 80
          - path: /api/register
            pathType: Prefix
            backend:
              service:
                name: registration-service
                port:
                  number: 80
          - path: /api/track
            pathType: Prefix
            backend:
              service:
                name: analytics-service
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
